[package]
name = "e_drone_sp"
version = "21.3.4"
authors = ["Sanghyo Lee <realwolfmax@gmail.com>"]
description = "Rust library for BYROBOT Drones."
documentation = "https://docs.rs/e_drone_sp"
homepage = "https://github.com/byrobot-rust/e_drone_sp"
repository = "https://github.com/byrobot-rust/e_drone_sp"
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "e_drone_sp"
bench = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport="4.0.0"
e_drone="21.*"